Mapeando os erros validacao nas classes RestauranteModel e CozinhaModel usando o arquivo messages.properties em Resource Bundle

--- a/src/main/resources/messages.properties
+++ b/src/main/resources/messages.properties
@@ -1,7 +1,23 @@
-NotBlank.restauranteModel.nome=Nome do restaurante é obrigatório
-NotBlank.cozinhaModel.nome=Nome de cozinha é obrigatório
+# ===================================================================
+# ===== VALIDANDO OS CAMPOS DA CLASSE RestauranteModel ==============
+# ===================================================================
 
-#NotBlank.restauranteModel.cozinha --> Falta mapear a mensagem de erro no objeto cozinha em restaurante
+NotBlank.restauranteModel.nome=O campo ''nome'' do restaurante é obrigatório.
+NotNull.restauranteModel.cozinha=O objeto ''cozinha'' do restaurante é obrigatório.
+DecimalMin.restauranteModel.taxaFrete=O campo ''taxaFrete'' deve ser maior que ou igual a 1.
+
+NotNull.restauranteModel.cozinha.id=O campo ''id'' do objeto ''cozinha'' do restaurante é obrigatório.
+
+# ===================================================================
+# ===== VALIDANDO OS CAMPOS DA CLASSE CozinhaModel ==============
+# ===================================================================
+
+NotBlank.cozinhaModel.nome=O campo ''nome'' de cozinha é obrigatório
+
+
+# ===================================================================
+# ===== Alguns exemplos de formatação ==============
+# ===================================================================
 
 #NotBlank={0} é obrigatório # Pega o nome do campo que está na classe
 #NotBlank.nome=Informe um nome, porque é obrigatório # Tem precedência comparado com o de cima porque é mais específico
