Usando o Resource Bundle do Spring como Resource Bundle do Bean Validation

--- a/src/main/resources/messages.properties
+++ b/src/main/resources/messages.properties
@@ -1,3 +1,8 @@
+# Esse é o arquivo padrão do Spring para customizar os erros. Esse arquivo tem precedência em
+# relação ao arquivo ValidationMessages.properties que o Bean Validation usa para customizar os erros. Caso não esteja
+# usando o contexto do Spring e quiser customizar os erros, tem que criar o arquivo ValidationMessages.properties para o
+# Bean Validation usar como padrão.
+
 # ===================================================================
 # ===== VALIDANDO OS CAMPOS DA CLASSE RestauranteModel ==============
 # ===================================================================
