Criando constraint de validaçãcao stomizadas usando composiçcao com Bean Validation.

--- a/src/main/resources/messages.properties
+++ b/src/main/resources/messages.properties
@@ -9,15 +9,20 @@
 
 NotBlank.restauranteModel.nome=O campo ''nome'' do restaurante é obrigatório.
 NotNull.restauranteModel.cozinha=O objeto ''cozinha'' do restaurante é obrigatório.
-DecimalMin.restauranteModel.taxaFrete=O campo ''taxaFrete'' deve ser maior que ou igual a 1.
+#DecimalMin.restauranteModel.taxaFrete=O campo ''taxaFrete'' deve ser maior que ou igual a 1.
 
 NotNull.restauranteModel.cozinha.id=O campo ''id'' do objeto ''cozinha'' do restaurante é obrigatório.
+
+TaxaFreteValid.taxaFrete.invalida=Caiu na anotação personalizada.
 
 # ===================================================================
 # ===== VALIDANDO OS CAMPOS DA CLASSE CozinhaModel ==============
 # ===================================================================
 
 NotBlank.cozinhaModel.nome=O campo ''nome'' de cozinha é obrigatório
+
+
+
 
 
 # ===================================================================
