--- a/src/main/resources/messages.properties
+++ b/src/main/resources/messages.properties
@@ -9,7 +9,7 @@
 
 NotBlank.restauranteModel.nome=O campo ''nome'' do restaurante é obrigatório.
 NotNull.restauranteModel.cozinha=O objeto ''cozinha'' do restaurante é obrigatório.
-#DecimalMin.restauranteModel.taxaFrete=O campo ''taxaFrete'' deve ser maior que ou igual a 1.
+DecimalMin.restauranteModel.taxaFrete=O campo ''taxaFrete'' deve ser maior que ou igual a 1.
 
 NotNull.restauranteModel.cozinha.id=O campo ''id'' do objeto ''cozinha'' do restaurante é obrigatório.
 
