Ajustando ControllerExceptionHandler para adicionar mensagens de validacao em nivel de Classe com a nossa anotacao criada com ConstraintValidation

--- a/src/main/resources/messages.properties
+++ b/src/main/resources/messages.properties
@@ -16,13 +16,17 @@ NotNull.restauranteModel.cozinha.id=O campo ''id'' do objeto ''cozinha'' do rest
 TaxaFreteValid.taxaFrete.invalida=Caiu na anotação personalizada.
 
 # ===================================================================
-# ===== VALIDANDO OS CAMPOS DA CLASSE CozinhaModel ==============
+# ===== VALIDANDO OS CAMPOS DA CLASSE CozinhaModel ==================
 # ===================================================================
 
 NotBlank.cozinhaModel.nome=O campo ''nome'' de cozinha é obrigatório
 
 
+# ===================================================================
+# ===== VALIDANDO OS CAMPOS COM A ANOTAÇÃO CUSTOMIZADA @ValorZeroIncluiDescricaoValid ==================
+# ===================================================================
 
+ValorZeroIncluiDescricaoValid.restauranteModel=O campo \''{1}\'' deve conter o valor \''{2}\''.
 
 
 # ===================================================================
