Criacao das classes RestauranteInput e CozinhaIdInput na API - POST salva Restaurante

--- a/src/main/resources/messages.properties
+++ b/src/main/resources/messages.properties
@@ -28,6 +28,18 @@ NotBlank.cozinhaModel.nome=O campo ''nome'' de cozinha é obrigatório
 
 ValorZeroIncluiDescricaoValid.restauranteModel=O campo \''{1}\'' deve conter o valor \''{2}\''.
 
+# ===================================================================
+# ===== VALIDANDO OS CAMPOS DA CLASSE RestauranteInput ==============
+# ===================================================================
+
+NotBlank.restauranteInput.nome=O campo ''nome'' do restaurante é obrigatório.
+NotNull.restauranteInput.cozinha=O objeto ''cozinha'' do restaurante é obrigatório.
+NotNull.restauranteInput.taxaFrete=O campo ''taxaFrete'' do restaurante é obrigatório.
+DecimalMin.restauranteInput.taxaFrete=O campo ''taxaFrete'' deve ser maior que ou igual a 1.
+
+NotNull.restauranteInput.cozinha.id=O campo ''id'' do objeto ''cozinha'' do restaurante é obrigatório.
+
+
 
 # ===================================================================
 # ===== Alguns exemplos de formatação ==============
