Criacao do controller FormaPagamentoController e refatoracao do ModelMapperConfig e messages.properties

--- a/src/main/resources/messages.properties
+++ b/src/main/resources/messages.properties
@@ -39,6 +39,11 @@ DecimalMin.restauranteInput.taxaFrete=O campo ''taxaFrete'' deve ser maior que o
 
 NotNull.restauranteInput.cozinha.id=O campo ''id'' do objeto ''cozinha'' do restaurante é obrigatório.
 
+# ===================================================================
+# ===== VALIDANDO OS CAMPOS DA CLASSE FormaPagamentoInput ==============
+# ===================================================================
+
+NotBlank.formaPagamentoInput.descricao=O campo ''descricao'' da forma de pagamento é obrigatório e não deve estar em branco.
 
 
 # ===================================================================
