Adicionando o mapeamento do ModelMapperConfig de UsuarioModel para UsuarioDTO e adicionando as mensagens de validaçcao em messages.properties

--- a/src/main/resources/messages.properties
+++ b/src/main/resources/messages.properties
@@ -55,10 +55,30 @@ NotBlank.restauranteInput.endereco.cidadeId=O campo ''cidadeId'' do objeto ''end
 NotBlank.formaPagamentoInput.descricao=O campo ''descricao'' da forma de pagamento é obrigatório e não deve estar em branco.
 
 # ===================================================================
-# ===== VALIDANDO OS CAMPOS DA CLASSE GrupoInput ===========
+# ===== VALIDANDO OS CAMPOS DA CLASSE UsuarioComSenhaInput ==========
 # ===================================================================
 
-NotBlank.grupoInput.nome=O campo ''nome'' do grupo é obrigatório e não deve estar vazio.
+NotBlank.usuarioComSenhaInput.nome=O campo ''nome'' do usuario é obrigatório e não deve estar vazio.
+NotBlank.usuarioComSenhaInput.email=O campo ''email'' do usuario é obrigatório e não deve estar vazio.
+NotBlank.usuarioComSenhaInput.senha=O campo ''senha'' do usuario é obrigatório e não deve estar vazio.
+Email.usuarioComSenhaInput.email=O campo ''email'' do usuario não é um e-mail. Corrija e tente novamente.
+
+
+# ===================================================================
+# ===== VALIDANDO OS CAMPOS DA CLASSE UsuarioInput ==========
+# ===================================================================
+
+NotBlank.usuarioInput.nome=O campo ''nome'' do usuario é obrigatório e não deve estar vazio.
+NotBlank.usuarioInput.email=O campo ''email'' do usuario é obrigatório e não deve estar vazio.
+Email.usuarioInput.email=O campo ''email'' do usuario não é um e-mail. Corrija e tente novamente.
+
+
+# ===================================================================
+# ===== VALIDANDO OS CAMPOS DA CLASSE UsuarioInput ==========
+# ===================================================================
+
+NotBlank.usuarioNovaSenhaInput.senhaAtual=O campo ''senhaAtual'' do usuario é obrigatório e não deve estar vazio.
+NotBlank.usuarioNovaSenhaInput.novaSenha=O campo ''novaSenha'' do usuario é obrigatório e não deve estar vazio.
 
 
 # ===================================================================
