Implementando regra de negocio para evitar usuarios com e-mail duplicados

--- a/src/main/resources/messages.properties
+++ b/src/main/resources/messages.properties
@@ -74,7 +74,7 @@ Email.usuarioInput.email=O campo ''email'' do usuario não é um e-mail. Corrija
 
 
 # ===================================================================
-# ===== VALIDANDO OS CAMPOS DA CLASSE UsuarioInput ==========
+# ===== VALIDANDO OS CAMPOS DA CLASSE UsuarioNovaSenhaInput ==========
 # ===================================================================
 
 NotBlank.usuarioNovaSenhaInput.senhaAtual=O campo ''senhaAtual'' do usuario é obrigatório e não deve estar vazio.
