Criacao da classe ProdutoModelAssembler e adicionando as mensagens de validacao de ProdutoInput em messages.properties

--- a/src/main/resources/messages.properties
+++ b/src/main/resources/messages.properties
@@ -82,6 +82,16 @@ NotBlank.usuarioNovaSenhaInput.novaSenha=O campo ''novaSenha'' do usuario é obr
 
 
 # ===================================================================
+# ===== VALIDANDO OS CAMPOS DA CLASSE ProdutoInput ==========
+# ===================================================================
+
+NotBlank.produtoInput.nome=O campo ''nome'' do produto é obrigatório e não deve estar vazio.
+NotBlank.produtoInput.descricao=O campo ''descricao'' do produto é obrigatório e não deve estar vazio.
+NotBlank.produtoInput.preco=O campo ''preco'' do usuario é obrigatório.
+PositiveOrZero.produtoInput.preco=O campo ''preco'' deve ser maior ou igual a zero.
+
+
+# ===================================================================
 # ===== Alguns exemplos de formatação ==============
 # ===================================================================
 
