Implementacao das mensagens de erro de validacao para a classe PedidoInput

--- a/src/main/resources/messages.properties
+++ b/src/main/resources/messages.properties
@@ -90,6 +90,25 @@ NotBlank.produtoInput.descricao=O campo ''descricao'' do produto é obrigatório
 NotBlank.produtoInput.preco=O campo ''preco'' do usuario é obrigatório.
 PositiveOrZero.produtoInput.preco=O campo ''preco'' deve ser maior ou igual a zero.
 
+# ===================================================================
+# ===== VALIDANDO OS CAMPOS DA CLASSE PedidoInput ==========
+# ===================================================================
+
+NotNull.pedidoInput.restauranteId=O campo ''restauranteId'' do pedido é obrigatório e não deve estar vazio.
+NotNull.pedidoInput.formaPagamentoId=O campo ''formaPagamentoId'' do pedido é obrigatório e não deve estar vazio.
+
+NotNull.pedidoInput.enderecoEntrega=O objeto ''enderecoEntrega'' do pedido é obrigatório.
+NotBlank.pedidoInput.enderecoEntrega.cep=O campo ''cep'' do objeto ''enderecoEntrega'' do pedido é obrigatório e não deve estar em branco.
+NotBlank.pedidoInput.enderecoEntrega.logradouro=O campo ''logradouro'' do objeto ''enderecoEntrega'' do pedido é obrigatório e não deve estar em branco.
+NotBlank.pedidoInput.enderecoEntrega.numero=O campo ''numero'' do objeto ''enderecoEntrega'' do pedido é obrigatório e não deve estar em branco.
+NotBlank.pedidoInput.enderecoEntrega.bairro=O campo ''bairro'' do objeto ''enderecoEntrega'' do pedido é obrigatório e não deve estar em branco.
+NotNull.pedidoInput.enderecoEntrega.cidadeId=O campo ''cidadeId'' do objeto ''enderecoEntrega'' do pedido é obrigatório e não deve estar vazio.
+
+NotNull.pedidoInput.itens=A lista ''itens'' do pedido é obrigatório e não deve estar vazio.
+Size.pedidoInput.itens=A lista ''itens'' do pedido deve conter pelo menos um item.
+NotNull.pedidoInput.itens.produtoId=O campo ''produtoId'' da lista ''itens'' do pedido é obrigatório e não deve estar vazio.
+NotNull.pedidoInput.itens.quantidade=O campo ''quantidade'' da lista ''itens'' do pedido é obrigatório e não deve estar vazio.
+Positive.pedidoInput.itens.quantidade=O campo ''quantidade'' da lista ''itens'' deve ser maior ou igual a um.
 
 # ===================================================================
 # ===== Alguns exemplos de formatação ==============
