Tratando BindException ao enviar parâmetros de URL inválido.

--- a/src/main/resources/messages.properties
+++ b/src/main/resources/messages.properties
@@ -65,7 +65,7 @@ Email.usuarioComSenhaInput.email=O campo ''email'' do usuario não é um e-mail.
 
 
 # ===================================================================
-# ===== VALIDANDO OS CAMPOS DA CLASSE UsuarioInput ==========
+# ===== VALIDANDO OS CAMPOS DA CLASSE UsuarioInput ==================
 # ===================================================================
 
 NotBlank.usuarioInput.nome=O campo ''nome'' do usuario é obrigatório e não deve estar vazio.
@@ -74,7 +74,7 @@ Email.usuarioInput.email=O campo ''email'' do usuario não é um e-mail. Corrija
 
 
 # ===================================================================
-# ===== VALIDANDO OS CAMPOS DA CLASSE UsuarioNovaSenhaInput ==========
+# ===== VALIDANDO OS CAMPOS DA CLASSE UsuarioNovaSenhaInput =========
 # ===================================================================
 
 NotBlank.usuarioNovaSenhaInput.senhaAtual=O campo ''senhaAtual'' do usuario é obrigatório e não deve estar vazio.
@@ -82,7 +82,7 @@ NotBlank.usuarioNovaSenhaInput.novaSenha=O campo ''novaSenha'' do usuario é obr
 
 
 # ===================================================================
-# ===== VALIDANDO OS CAMPOS DA CLASSE ProdutoInput ==========
+# ===== VALIDANDO OS CAMPOS DA CLASSE ProdutoInput ==================
 # ===================================================================
 
 NotBlank.produtoInput.nome=O campo ''nome'' do produto é obrigatório e não deve estar vazio.
@@ -91,7 +91,7 @@ NotBlank.produtoInput.preco=O campo ''preco'' do usuario é obrigatório.
 PositiveOrZero.produtoInput.preco=O campo ''preco'' deve ser maior ou igual a zero.
 
 # ===================================================================
-# ===== VALIDANDO OS CAMPOS DA CLASSE PedidoInput ==========
+# ===== VALIDANDO OS CAMPOS DA CLASSE PedidoInput ===================
 # ===================================================================
 
 NotNull.pedidoInput.restauranteId=O campo ''restauranteId'' do pedido é obrigatório e não deve estar vazio.
@@ -109,6 +109,17 @@ Size.pedidoInput.itens=A lista ''itens'' do pedido deve conter pelo menos um ite
 NotNull.pedidoInput.itens.produtoId=O campo ''produtoId'' da lista ''itens'' do pedido é obrigatório e não deve estar vazio.
 NotNull.pedidoInput.itens.quantidade=O campo ''quantidade'' da lista ''itens'' do pedido é obrigatório e não deve estar vazio.
 Positive.pedidoInput.itens.quantidade=O campo ''quantidade'' da lista ''itens'' deve ser maior ou igual a um.
+
+# ===================================================================
+# ===== VALIDANDO OS CAMPOS DA CLASSE PedidoFilter ===================
+# ===================================================================
+# Essa classe é um exemplo de como utilizar os campos da classe passando como parâmetro na API, está implementado em PedidoController ma API: /pedidos/pesquisar
+
+typeMismatch.pedidoFilter.dataCriacaoInicio=O parâmetro ''dataCriacaoInicio'' está inválido, forneça uma data padrão: yyyy-MM-ddTHH:mm:ssZ.
+typeMismatch.pedidoFilter.dataCriacaoFim=O parâmetro ''dataCriacaoFim'' está inválido, forneça uma data padrão: yyyy-MM-ddTHH:mm:ssZ.
+typeMismatch.pedidoFilter.clienteId=O parâmetro ''clienteId'' está inválido, forneça um valor válido do tipo: Long.
+typeMismatch.pedidoFilter.restauranteId=O parâmetro ''restauranteId'' está inválido, forneça um valor válido do tipo: Long.
+
 
 # ===================================================================
 # ===== Alguns exemplos de formatação ==============
