Adicionando os filtros na consulta de vendas diárias

--- a/src/main/resources/messages.properties
+++ b/src/main/resources/messages.properties
@@ -113,13 +113,22 @@ Positive.pedidoInput.itens.quantidade=O campo ''quantidade'' da lista ''itens'' 
 # ===================================================================
 # ===== VALIDANDO OS CAMPOS DA CLASSE PedidoFilter ===================
 # ===================================================================
-# Essa classe é um exemplo de como utilizar os campos da classe passando como parâmetro na API, está implementado em PedidoController ma API: /pedidos/pesquisar
+# Essa classe é um exemplo de como utilizar os campos da classe passando como parâmetro na API, está implementado em PedidoController na API: /pedidos/pesquisar
 
 typeMismatch.pedidoFilter.dataCriacaoInicio=O parâmetro ''dataCriacaoInicio'' está inválido, forneça uma data padrão: yyyy-MM-ddTHH:mm:ssZ.
 typeMismatch.pedidoFilter.dataCriacaoFim=O parâmetro ''dataCriacaoFim'' está inválido, forneça uma data padrão: yyyy-MM-ddTHH:mm:ssZ.
 typeMismatch.pedidoFilter.clienteId=O parâmetro ''clienteId'' está inválido, forneça um valor válido do tipo: Long.
 typeMismatch.pedidoFilter.restauranteId=O parâmetro ''restauranteId'' está inválido, forneça um valor válido do tipo: Long.
 
+
+# ===================================================================
+# ===== VALIDANDO OS CAMPOS DA CLASSE VendaDiariaFilter ===================
+# ===================================================================
+# Essa classe é um exemplo de como utilizar os campos da classe passando como parâmetro na API, está implementado em EstatisticasController na API: /estatisticas
+
+typeMismatch.vendaDiariaFilter.restauranteId=O parâmetro ''restauranteId'' está inválido, forneça um valor válido do tipo: Long.
+typeMismatch.vendaDiariaFilter.dataCriacaoInicio=O parâmetro ''dataCriacaoInicio'' está inválido, forneça uma data padrão: dd/MM/yyyy.
+typeMismatch.vendaDiariaFilter.dataCriacaoFim=O parâmetro ''dataCriacaoFim'' está inválido, forneça uma data padrão: dd/MM/yyyy.
 
 # ===================================================================
 # ===== Alguns exemplos de formatação ==============
