Implementacao da validacao do tamanho maximo do arquivo permitido

--- a/src/main/resources/messages.properties
+++ b/src/main/resources/messages.properties
@@ -122,13 +122,23 @@ typeMismatch.pedidoFilter.restauranteId=O parâmetro ''restauranteId'' está inv
 
 
 # ===================================================================
-# ===== VALIDANDO OS CAMPOS DA CLASSE VendaDiariaFilter ===================
+# ===== VALIDANDO OS CAMPOS DA CLASSE VendaDiariaFilter =============
 # ===================================================================
 # Essa classe é um exemplo de como utilizar os campos da classe passando como parâmetro na API, está implementado em EstatisticasController na API: /estatisticas
 
 typeMismatch.vendaDiariaFilter.restauranteId=O parâmetro ''restauranteId'' está inválido, forneça um valor válido do tipo: Long.
 typeMismatch.vendaDiariaFilter.dataCriacaoInicio=O parâmetro ''dataCriacaoInicio'' está inválido, forneça uma data padrão: dd/MM/yyyy.
 typeMismatch.vendaDiariaFilter.dataCriacaoFim=O parâmetro ''dataCriacaoFim'' está inválido, forneça uma data padrão: dd/MM/yyyy.
+
+
+# ===================================================================
+# ===== VALIDANDO OS CAMPOS DA CLASSE FotoProdutoInput ==============
+# ===================================================================
+
+NotBlank.fotoProdutoInput.descricao=O campo ''descricao'' é obrigatório e não deve estar em branco.
+NotNull.fotoProdutoInput.arquivo=O campo ''arquivo'' é obrigatório e não deve estar vazio.
+FileSizeValid.fotoProdutoInput.arquivo=O campo ''arquivo'' excedeu o limite de {1} válido permitido.
+
 
 # ===================================================================
 # ===== Alguns exemplos de formatação ==============
