Implementacao da annotation @FileContentTypeValid para validacao do tipo de formato do arquivo permitido

--- a/src/main/resources/messages.properties
+++ b/src/main/resources/messages.properties
@@ -138,6 +138,7 @@ typeMismatch.vendaDiariaFilter.dataCriacaoFim=O parâmetro ''dataCriacaoFim'' es
 NotBlank.fotoProdutoInput.descricao=O campo ''descricao'' é obrigatório e não deve estar em branco.
 NotNull.fotoProdutoInput.arquivo=O campo ''arquivo'' é obrigatório e não deve estar vazio.
 FileSizeValid.fotoProdutoInput.arquivo=O campo ''arquivo'' excedeu o limite de {1} válido permitido.
+FileContentTypeValid.fotoProdutoInput.arquivo=O campo ''arquivo'' deve ser do formato JPG ou PNG
 
 
 # ===================================================================
