--- a/src/main/resources/messages.properties
+++ b/src/main/resources/messages.properties
@@ -142,6 +142,22 @@ FileContentTypeValid.fotoProdutoInput.arquivo=O campo ''arquivo'' deve ser do fo
 
 
 # ===================================================================
+# ===== VALIDANDO OS CAMPOS DA CLASSE CidadeInputV2 ==============
+# ===================================================================
+
+NotBlank.cidadeInputV2.nome=O campo ''nome'' é obrigatório e não deve estar em branco.
+NotNull.cidadeInputV2.estadoId=O campo ''estadoId'' é obrigatório e não deve estar vazio.
+
+
+# ===================================================================
+# ===== VALIDANDO OS CAMPOS DA CLASSE CozinhaInputV2 ==============
+# ===================================================================
+
+NotBlank.cozinhaInputV2.cozinhaNome=O campo ''cozinhaNome'' é obrigatório e não deve estar em branco.
+
+
+
+# ===================================================================
 # ===== Alguns exemplos de formatação ==============
 # ===================================================================
 
