Customizando a página de OAuth2 Approval

--- a/src/main/resources/messages.properties
+++ b/src/main/resources/messages.properties
@@ -156,6 +156,14 @@ NotNull.cidadeInputV2.estadoId=O campo ''estadoId'' é obrigatório e não deve 
 NotBlank.cozinhaInputV2.cozinhaNome=O campo ''cozinhaNome'' é obrigatório e não deve estar em branco.
 
 
+# ===================================================================
+# ===== TELA DE APROVACAO DE SCOPES apprival.html ==============
+# ===================================================================
+
+scope.READ=Acesso de leitura
+scope.WRITE=Acesso de escrita
+
+
 
 # ===================================================================
 # ===== Alguns exemplos de formatação ==============
